?? Jul 2003, Version 4.3.3
- Prevent yaz from logging unless yaz.log_file is set (Adam Dickmeiss)
- Added long options into CLI & CGI (e.g. --version). (Marcus)
- Added new command line parameters -B, -F, -R and -E which allow to process 
  stdin line by line (See 'php -h' or 'man php' for more). (Marcus)
- Added DBA handler 'inifile' to support ini files. (Marcus)
- Fixed bug #23898 (Proper handling of NULLs in odbc_result, odbc_fetch_into
  and odbc_result_all). (Ilia)
- Fixed bug #23897 (Fixed a check for mbfilter_ru.h). (aleks@m2media.ru, Ilia)
- Fixed bug #23894 (sprintf() decimal specifiers problem). (Moriyoshi)
- Fixed bug #23888 (Missing input validation for flags parameter). (Ilia)

29 May 2003, Version 4.3.2
- Syncronized bundled GD library with GD 2.0.12. (Ilia)
- Removed support for GDLIB version 1.x.x (php_gd.dll) on Windows. (Edin)
- Enabled read-only GIF support in the bundled GDLIB (php_gd2.dll) on Windows.
  (Sebastian, Edin)
- Improved dba extension (Marcus)
  . Added support for internal error handling of Berkeley db libraries.
  . Disallowed Berkeley db versions 4.1.0 to 4.1.24 due to locking problems.
  . Disallowed linkage of Berkeley db submodules against libraries with
    different major versions.
  . Disallowed configuring of more than one Berkeley db handler. 
  . Reenabled dba_popen() with new persistent STDIO streams.
- Added a new Apache 2.0 SAPI module (sapi/apache2handler) based on the old 
  version (sapi/apache2filter). (Ian Holsman, Justin Erenkrantz)
- Added "disable_classes" php.ini option to allow administrators to disable
  certain classes for security reasons. (Harald)
- Added man page for CLI version of PHP. (Marcus)
- Added --clean option into phpize. (Jani)
- Added --ldflags option into php-config. (Jani)
- Added imagesavealpha() and imageistruecolor() functions. (Pierre)
- Added XBM support for bundled GD library. (Marcus)
- Added session_regenerate_id() function. (Sascha)